added createRobot and getRobot
